--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 *.so
 *.dylib
 
+
 # Test binary, built with `go test -c`
 *.test
 
@@ -19,3 +20,9 @@
 
 # Go workspace file
 go.work
+
+*.swp
+kussuma-web
+node_modules
+dist
+cmd/server/server
