restructure and index.html fix

--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "scripts": {
-    "init": "mkdir dist && mkdir dist/_css",
-    "build": "npx tailwindcss -i \"css/input.css\" -o \"dist/_css/output.css\"",
-    "postbuild": "cp html/* dist",
-    "watch": "npx tailwindcss -i \"css/input.css\" -o \"dist/_css/output.css\" -w",
-    "postbuild": "cp html/* dist"
+    "build": "npx tailwindcss -i \"input.css\" -o \"www/css/output.css\"",
+    "watch": "npx tailwindcss -i \"input.css\" -o \"www/css/output.css\" -w"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.3"
